change to new tinyasm